# OpenNOW

./: .gitignore  AGENTS.md  README.md  flake.nix  package.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: auto-build.yml  native-streamer-build.yml  native-streamer-windows.yml  release.yml
docs/: development.md  gfn-ad-implementation-report.md  streamer-investigation.md
docs/gfn-official-client-capture/: README.md  browser-artifacts.json  console-logs.json  endpoints.json  live-queue-ad-artifact.json  live-queue-console-2026-04-07T2305Z.json  live-queue-returned-to-play-2026-04-07T2316Z.json  live-queue-runtime-2026-04-07T2305Z.json  opennow-live-queue-state-2026-04-07T2319Z.json  opennow-ready-transition-latest.json  page-shell.html  resource-summary.json
ios/OpenNOWiOS/: README.md
ios/OpenNOWiOS/OpenNOWiOS/: BrandLogoView.swift  BrowseView.swift  ContentView.swift  Haptics.swift  HomeView.swift  Info.plist  LibraryView.swift  LoginView.swift  NotificationManager.swift  OpenNOWStore.swift  OpenNOWiOSApp.swift  PrintedWasteQueueView.swift  SessionView.swift  SettingsView.swift  StreamLoadingView.swift  StreamerView.swift
ios/OpenNOWiOS/OpenNOWiOS.xcodeproj/: project.pbxproj
ios/OpenNOWiOS/OpenNOWiOS/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/OpenNOWiOS/OpenNOWiOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/OpenNOWiOS/OpenNOWiOS/Assets.xcassets/StoreEpic.imageset/: Contents.json
ios/OpenNOWiOS/OpenNOWiOS/Assets.xcassets/StoreSteam.imageset/: Contents.json
ios/OpenNOWiOS/OpenNOWiOS/Assets.xcassets/StoreXbox.imageset/: Contents.json
opennow-native-streamer/: CMakeLists.txt  Cargo.toml  README.md  vcpkg.json
opennow-native-streamer/include/opennow/native/: app.hpp  media_pipeline.hpp
opennow-native-streamer/internal/media/: player_gstreamer.go
opennow-native-streamer/src/: main.rs
opennow-native-streamer/src/app/: application.cpp
opennow-native-streamer/src/control/: mod.rs
opennow-native-streamer/src/input/: input_bridge.cpp  protocol.rs
opennow-native-streamer/src/ipc/: mod.rs
opennow-native-streamer/src/media/: media_pipeline.cpp  mod.rs
opennow-native-streamer/src/session/: types.rs
opennow-native-streamer/src/webrtc/: sdp.rs  webrtc_session.cpp
opennow-stable/: README.md  electron-builder.base.json  electron-builder.catalina.json  electron-builder.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
opennow-stable/android/app/: build.gradle
opennow-stable/android/app/src/androidTest/java/com/opencloudgaming/opennow/: ExampleInstrumentedTest.java
opennow-stable/android/app/src/main/: AndroidManifest.xml
opennow-stable/android/app/src/main/java/com/opencloudgaming/opennow/: LocalhostAuthPlugin.java  LoginActivity.java  MainActivity.java
opennow-stable/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
opennow-stable/docs/gfn-official-client-capture/: opennow-ad-queue-latest.json  opennow-ready-transition-latest.json
opennow-stable/native-bin/linux-x64/: opennow-native-streamer
opennow-stable/scripts/: bundle-native-runtime.mjs  chromium-stream-e2e-client.html  chromium-stream-e2e-peer.html  chromium-stream-e2e.mjs  native-streamer-e2e-controller-preload.cjs  native-streamer-e2e-electron.mjs  native-streamer-e2e-peer-preload.cjs  native-streamer-e2e.mjs  prepare-native-streamer.mjs  run-electron-script.mjs
opennow-stable/src/main/: discordRpc.ts  index.ts  settings.ts  updater.ts
opennow-stable/src/main/gfn/: auth.ts  cloudmatch.test.ts  cloudmatch.ts  cloudmatchHelpers.ts  errorCodes.ts  games.ts  launchMode.test.ts  monitorSettings.ts  signaling.ts  subscription.ts  types.ts
opennow-stable/src/main/services/: nativeStreamerManager.ts  refreshScheduler.ts  streamerManager.ts
opennow-stable/src/preload/: index.ts
opennow-stable/src/renderer/src/: App.tsx  main.tsx  shortcuts.ts  styles.css
opennow-stable/src/renderer/src/components/: ControllerButtons.tsx  ControllerLibraryPage.tsx  ControllerStreamLoading.tsx  ElapsedSessionIndicators.tsx  GameCard.tsx  HomePage.tsx  LibraryPage.tsx  Navbar.tsx  QueueAdFallbackCard.tsx  QueueAdPreview.tsx  QueueServerSelectModal.tsx  SettingsPage.tsx  SideBar.tsx  StatsOverlay.tsx  StreamLoading.tsx  StreamView.tsx
opennow-stable/src/renderer/src/gfn/: hapticsManager.ts  inputProtocol.test.ts  inputProtocol.ts  keyboardLock.test.ts  keyboardLock.ts  microphoneManager.ts  sdp.ts  webrtcClient.ts
opennow-stable/src/renderer/src/lib/: codecDiagnostics.ts
opennow-stable/src/renderer/src/platform/: electron.ts  types.ts
opennow-stable/src/renderer/src/platform/android/: api.ts  browserSignaling.ts  http.ts  storage.ts
opennow-stable/src/renderer/src/utils/: streamDiagnosticsStore.ts  useElapsedSeconds.ts  usePlaytime.ts
opennow-stable/src/shared/: gfn.ts  gfnClient.ts  ipc.ts  settings.ts
opennow-streamer/: Cargo.toml  README.md
opennow-streamer/src/: control.rs  input.rs  main.rs  media.rs  messages.rs  sdp.rs  session.rs  window.rs
winget/manifests/o/OpenCloudGaming/OpenNOW/0.3.1/: OpenCloudGaming.OpenNOW.installer.yaml  OpenCloudGaming.OpenNOW.locale.en-US.yaml  OpenCloudGaming.OpenNOW.yaml
