[package]
name = "opennow-native-streamer"
version = "0.2.0"
edition = "2021"
description = "OpenNOW Native Streamer"
license = "MIT"

[lib]
name = "opennow_native_streamer"
path = "src/lib.rs"

[[bin]]
name = "opennow-native-streamer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
gilrs = "0.11"
glib = "0.22"
gstreamer = { version = "0.25.1", features = ["v1_24"] }
gstreamer-app = { version = "0.25.0", features = ["v1_24"] }
gstreamer-audio = { version = "0.25.0", features = ["v1_24"] }
gstreamer-sdp = { version = "0.25.0", features = ["v1_24"] }
gstreamer-video = { version = "0.25.0", features = ["v1_24"] }
gstreamer-webrtc = { version = "0.25.0", features = ["v1_24"] }
gtk4 = { version = "0.11.2", features = ["v4_14"] }
interprocess = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
