[package]
name = "opennow-streamer"
version = "0.1.0"
edition = "2021"
description = "OpenNOW native streamer MVP"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
opus = "0.3"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
gilrs = "0.11"
interceptor = "0.17.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
url = "2"
webrtc = "0.17"
rtp = "0.17"
winit = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
sdl2 = { version = "0.38", features = ["use-pkgconfig"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
sdl2 = { version = "0.38", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
